--- a/PierogiesBot.Manager/Views/LoginView.xaml
+++ b/PierogiesBot.Manager/Views/LoginView.xaml
@@ -1,4 +1,4 @@
-﻿<reactiveUi:ReactiveWindow x:TypeArguments="viewModels:LoginViewModel" x:Class="PierogiesBot.Manager.Views.LoginView"
+﻿<reactiveUi:ReactiveUserControl x:TypeArguments="viewModels:LoginViewModel" x:Class="PierogiesBot.Manager.Views.LoginView"
                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,8 +7,7 @@
                            xmlns:reactiveUi="http://reactiveui.net"
                            xmlns:viewModels="clr-namespace:PierogiesBot.Manager.ViewModels"
                            xmlns:system="clr-namespace:System;assembly=System.Runtime"
-                           mc:Ignorable="d" Width="400" Height="150"
-                           Title="LoginView" d:DataContext="{d:DesignInstance viewModels:LoginViewModel }">
+                           mc:Ignorable="d" d:DataContext="{d:DesignInstance viewModels:LoginViewModel }">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
@@ -30,4 +29,4 @@
         <Button Margin="10, 5, 5, 10" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="SignInButton">Sign in</Button>
         <Button Margin="5, 5, 10, 10" Grid.Row="2" Grid.Column="2" x:Name="CancelButton">Cancel</Button>
     </Grid>
-</reactiveUi:ReactiveWindow>
+</reactiveUi:ReactiveUserControl>
