--- a/PierogiesBot.Manager/Views/LoginView.xaml
+++ b/PierogiesBot.Manager/Views/LoginView.xaml
@@ -12,7 +12,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="3*" />
-            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         
         <Grid.RowDefinitions>
@@ -21,12 +21,12 @@
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
 
-        <Label HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0">Login</Label>
-        <TextBox Margin="5, 5, 10, 5" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="UserNameBox"/>
-        <Label HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0">Password</Label>
-        <PasswordBox Margin="5, 5, 10, 5" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" x:Name="PasswordBox"/>
+        <Label HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0">Login</Label>
+        <TextBox VerticalAlignment="Bottom" Margin="5, 5, 10, 5" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" MaxHeight="35" x:Name="UserNameBox"/>
+        <Label HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Row="1" Grid.Column="0">Password</Label>
+        <PasswordBox VerticalAlignment="Top" Margin="5, 5, 10, 5" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" MaxHeight="35" x:Name="PasswordBox"/>
 
-        <Button Margin="10, 5, 5, 10" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="SignInButton">Sign in</Button>
-        <Button Margin="5, 5, 10, 10" Grid.Row="2" Grid.Column="2" x:Name="CancelButton">Cancel</Button>
+        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10, 5, 5, 10" Grid.Row="1" Grid.Column="0" MaxHeight="50" x:Name="SignInButton">Sign in</Button>
+        <Button VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5, 5, 10, 10" Grid.Row="1" Grid.Column="1" MaxHeight="50" x:Name="CancelButton">Cancel</Button>
     </Grid>
 </reactiveUi:ReactiveUserControl>
